# fdr

./: .gitignore  Pipfile  README.md  README.rst  conf.py  fdr_install_editable.bat  fdr_install_editable_jc_home.bat  fdr_install_pypi.bat  index.rst  install_fdr.bat  main.py  pyproject.toml  setup.py  t  test_install_fdr.bat  tox.ini  utilities.py
docs/: HISTORY.rst  validation_rules.md
fdr/: __init__.py  cli.py
fdr/main/: cli.py  workbook.py
fdr/validation/: check_form_functions.py
junk/: exc_test.py  excel_data_handler.py  fdr_logic.py  main.py  pyproject.toml
rtm/: __init__.py  cli.py  rtm_worksheet.py  worksheet_columns.py
rtm/_old/: check_form_functions.py  headers_list.py
rtm/containers/: dataframe.py  field.py  fields.py  work_items.py  worksheet_columns.py
rtm/fields/: __init__.py  cascade_block.py  field.py  field_subclasses.py  fieldpatterns.py  id.py  validation.py
rtm/main/: api.py  cli.py  config.py  context_managers.py  excel.py  exceptions.py
rtm/validate/: checks.py  validation.py  validator_output.py
rtm/validation/: junk.py  some_random_functions.py
src/: __init__.py  apples.py
src/fdr/: __init__.py  api.py  cli.py  excel_handling.py  excel_path.py  exceptions.py  fdr_worksheet.py  path_handling.py
src/fdr/fields/: __init__.py  devices.py  field.py  id.py
src/fdr/validation/: __init__.py  check_form_functions.py  headers_list.py
src/rtm/: __init__.py  api.py  cli.py  fdr_worksheet.py  path_handling.py  rtm_worksheet.py  worksheet_columns.py
src/rtm/fields/: __init__.py  cascade_block.py  devices.py  field.py  field_subclasses.py  id.py  print_val_results.py  req_rationale.py  validation.py  validation_results.py
src/rtm/validation/: check_form_functions.py  headers_list.py  junk.py
src_fdr/: __init__.py  cli.py
tests/: conftest.py  test_inheritance.py  test_rtm.xlsx
tests/excel_tests/: excel_read_tests.py  test.xlsx  test_excel.py
tests/experiments/: text_wrap.py
tests/test_1_utilities/: test_convert_to_string.py
tests/test_3_fields/: test_fields.py
tests/test_4_work_items/: test_work_items.py
tests/test_5_validation/: test_checks.py  test_validation.py  test_validation_output.py
tests/test_6_smoke_test/: test_smoke_test.py
tests/unit/: fdr_simple.xlsx  rtm_simple.xlsx  test_api.py  test_fdr_worksheet.py  test_field.py  test_fields.py  test_print_val_results.py  test_rtm_worksheet.py  test_validation.py  test_validation_results.py
(+2 files in other folders)
