[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "src" # Wwhere Flit looks for the source files
dist-name = "fdr_validate" # Name of the application on PyPI
author = "Jonathan Chukinas"
author-email = "chukinas@gmail.com"
home-page = "https://github.com/jonathanchukinas/fdr"
classifiers = ["License :: OSI Approved :: MIT License"]
#description-file = "README.md"
#classifiers = [
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.7",
#]
#requires = ["feedparser", "html2text"]

[tool.flit.scripts]
fdr_validate = "src.apples:bananas"
