[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "src_fdr" # Where Flit looks for the source files
dist-name = "fdr" # Name of the application on PyPI
author = "Jonathan Chukinas"
author-email = "chukinas@gmail.com"
home-page = "https://github.com/jonathanchukinas/fdr"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.rst"
#classifiers = [
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.7",
#]
#requires = ["feedparser", "html2text"]

[tool.flit.scripts]
fdr = "src_fdr.cli:main"
