[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fdr_validate"
author = "Jonathan Chukinas"
author-email = "chukinas@gmail.com"
home-page = "https://github.com/jonathanchukinas/fdr"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
fdr_validate = "main:main"